--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE HTML>
+<html>
+<head>
+<title>Data Processing </title>
+</head>
 
+<body>
+The content of the document
+<a href="https://www.w3schools.com">Visit W3Schools.com!</a>
+</body>
+</html>
