--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 
 <body>
 The content of the document
-<a href="https://www.w3schools.com">Visit W3Schools.com!</a>
+<a href="Homework\Week_2\data.html">Homework week 2</a>
 </body>
 </html>
