--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 <body>
 The content of the document
-<a href="Homework\Week_1\data.html">Homework week 1</a>
+<a href="Homework\Week_1\movies.html">Homework week 1, movies.html</a>
+<a href="Homework\Week_1\movies.csv.html">Homework week 1, movies.csv</a>
 </body>
 </html>
