--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 The content of the document
 <a href="Homework\Week_1\movies.html">Homework week 1, movies.html</a>
-<a href="Homework\Week_1\movies.csv.html">Homework week 1, movies.csv</a>
+<b><a href="Homework\Week_1\movies.csv">Homework week 1, movies.csv</a></b>
 </body>
 </html>
