--- a/Homework/Week_3/KNMI.html
+++ b/Homework/Week_3/KNMI.html
@@ -3,7 +3,7 @@
 # Student number: 11202351
 -->
 <!--
-This html ....
+This html converts a json file to a line chart with the given data
 -->
 
 <!DOCTYPE html>
