--- a/Homework/Week_3/KNMI.html
+++ b/Homework/Week_3/KNMI.html
@@ -89,4 +89,10 @@ This html converts a json file to a line chart with the given data
 
     </script>
   </body>
+
+  <footer>
+    <p>Name: Tim de Boer</p>
+    <p>Studentnumber: 11202351</p>
+    <p>Link: <a href="http://projects.knmi.nl/klimatologie/daggegevens/selectie.cgi"> Dataset</a></p>
+  </footer>
 </html>
