Data input, convert csv to json, cleaned data, first d3 syntax in index

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <p><li>Homework Week 1: <a href="Homework\Week_1\movies.html">Homework week 1, movies.html</a></li></p>
 <p><li>Homework Week 1: <a href="Homework\Week_1\moviescraper.py.html">Homework week 1, moviescraper.py</a></li></p>
 <p><li>Homework week 3: <a href="Homework/Week_3/KNMI.html"> Week 3</a></li></p>
+<p><li>Homework week 4: </li></p>
 </body>
 </html>
