--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 <h1>Data Processing</h1>
 <h2>Assignments:</h2>
-<p><li>Homework Week 1: <a href="Homework\Week_1\movies.html">Homework week 1, movies.html</a></li></p>
-<p><li>Homework Week 1: <a href="Homework\Week_1\moviescraper.py.html">Homework week 1, moviescraper.py</a></li></p>
+<p><li>Homework Week 1: <a href="Homework/Week_1/movies.html">Homework week 1, movies.html</a></li></p>
+<p><li>Homework Week 1: <a href="Homework/Week_1/moviescraper.py.html">Homework week 1, moviescraper.py</a></li></p>
 <p><li>Homework week 3: <a href="Homework/Week_3/KNMI.html"> Week 3</a></li></p>
-<p><li>Homework week 4: <a href=""> Week 4</a></li></p>
+<p><li>Homework week 4: <a href="Homework/Week_4/index.html"> Week 4</a></li></p>
 </body>
 </html>
