--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <p><li>Homework Week 1: <a href="Homework/Week_1/moviescraper.py.html">Homework week 1, moviescraper.py</a></li></p>
 <p><li>Homework week 3: <a href="Homework/Week_3/KNMI.html"> Week 3</a></li></p>
 <p><li>Homework week 4: <a href="Homework/Week_4/index.html"> Week 4</a></li></p>
+<p><li>Homework week 5: <a href="Homework/Week_5/scatter.html"> Week 5</a></li></p>
 </body>
 </html>
