--- a/Homework/Week_5/scatter.html
+++ b/Homework/Week_5/scatter.html
@@ -26,10 +26,10 @@ Interactive scatterplot
     <div class="dropdown">
       <button type="button" class="dropbtn" data-toggle="dropdown">Year</button>
       <div class="dropdown-content" role="content">
-        <a class="year" value="2012" href="#">2012</a>
-        <a class="year" value="2013" href="#">2013</a>
-        <a class="year" value="2014" href="#">2014</a>
-        <a class="year" value="2015" href="#">2015</a>
+        <a class="yrs" value="2012" href="#">2012</a>
+        <a class="yrs" value="2013" href="#">2013</a>
+        <a class="yrs" value="2014" href="#">2014</a>
+        <a class="yrs" value="2015" href="#">2015</a>
       </div>
     </div>
 
