--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <p><li>Homework week 3: <a href="Homework/Week_3/KNMI.html"> Week 3</a></li></p>
 <p><li>Homework week 4: <a href="Homework/Week_4/index.html"> Week 4</a></li></p>
 <p><li>Homework week 5: <a href="Homework/Week_5/scatter.html"> Week 5</a></li></p>
+<p><li>Homework week 6: <a href="Homework/Week_6/linked.html"> Week 6</a></li><p>
 </body>
 </html>
